syntax = "proto3";

package moose_choreography;

service Choreography {
    rpc LaunchComputation(LaunchComputationRequest) returns(LaunchComputationResponse);
    rpc AbortComputation(AbortComputationRequest) returns(AbortComputationResponse);
}

message LaunchComputationRequest {
    bytes session_id = 1;
    bytes computation = 2;
}

message LaunchComputationResponse {}

message AbortComputationRequest {
    string session_id = 1;
}

message AbortComputationResponse {}
